--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,22 @@
 {{ title }}
 
 <div *ngIf="title === 'nicolas'">
-  Este es un div
+  Este es Nicolas
+</div>
+
+<div *ngIf="title === 'julian'">
+  Este es Julian
+</div>
+
+<div *ngIf="title === 'camilo'">
+  Este es camilo
+</div>
+
+<div [ngSwitch]="title">
+  <p *ngSwitchCase="'nicolas'">Este es nicolas</p>
+  <p *ngSwitchCase="'julian'">Este es julian</p>
+  <p *ngSwitchCase="'camilo'">Este es camilo</p>
+  <p *ngSwitchDefault>No hay match</p>
 </div>
 
 <div *ngIf="isPro">
