--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,4 +1,4 @@
 <h3>{{ product.title }}</h3>
-<img src="{{ product.image }}" alt="{{ product.title }}" width="200">
+<img src="{{ product.image }}" alt="{{ product.title }}">
 <strong>{{ product.price }}</strong>
 <button (click)="addCart()">Agregar al carrito</button>
