--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,4 +1,6 @@
-<h3>{{ product.title }}</h3>
+<div class="product__info">
+  <h3>{{ product.title }}</h3>
+  <strong>$ {{ product.price }}</strong>
+</div>
 <img src="{{ product.image }}" alt="{{ product.title }}">
-<strong>{{ product.price }}</strong>
 <button (click)="addCart()">Agregar al carrito</button>
