--- a/src/app/components/product.component.scss
+++ b/src/app/components/product.component.scss
@@ -1,9 +1,41 @@
 :host {
-  margin: 2px;
-  border: 1px solid black;
+  margin: 10px;
   border-radius: 5px;
   display: block;
+  background-color: lightslategrey;
+  padding-top: 20px;
+  overflow: hidden;
+  color: white;
+}
+.product__info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+h3 {
+  margin: 0;
 }
 img {
   max-width: 100%;
+  height: 150px;
+  object-fit: cover;
+  display: block;
+  margin: 0 auto;
+}
+button {
+  display: block;
+  width: 100%;
+  border: 0;
+  padding: 15px 0;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: royalblue;
+  color: white;
+  transition: background 0.5s ease, color 0.5s ease;
+}
+button:hover {
+  background-color: greenyellow;
+  color: #090909;
 }
