--- a/src/app/components/product.component.scss
+++ b/src/app/components/product.component.scss
@@ -1,20 +1,21 @@
 :host {
-  margin: 10px;
-  border-radius: 5px;
   display: block;
-  background-color: lightslategrey;
-  padding-top: 20px;
-  overflow: hidden;
-  color: white;
-}
-.product__info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid lightgray;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
 }
 h3 {
-  margin: 0;
+  color: #333;
+  font-weight: normal;
+  font-size: 28px;
+  margin: 10px 0;
+}
+strong {
+  color: royalblue;
+  font-size: 18px;
+  margin-bottom: 10px;
+  display: block;
 }
 img {
   max-width: 100%;
@@ -27,15 +28,12 @@ button {
   display: block;
   width: 100%;
   border: 0;
-  padding: 15px 0;
-  font-size: 15px;
+  padding: 10px 0;
   font-weight: bold;
   cursor: pointer;
-  background-color: royalblue;
-  color: white;
-  transition: background 0.5s ease, color 0.5s ease;
+  color: #090909;
+  transition: background 0.5s ease;
 }
 button:hover {
   background-color: greenyellow;
-  color: #090909;
 }
