--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,5 +1,5 @@
 <img src="{{ product.image }}" alt="{{ product.title }}">
-<h3>{{ product.title | uppercase }}</h3>
+<h3 appHighlight>{{ product.title | uppercase }}</h3>
 <strong>{{ product.price | currency }}</strong>
 <p>{{ product.description | slice:0:10 }}</p>
 <p>{{ today | date:'HH:mm:ss' }}</p>
