--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,1 +1,42 @@
 <p>demo works!</p>
+
+<input type="text" [(ngModel)]="title">
+{{ title }}
+
+<input type="text" [(ngModel)]="power">
+{{ power | exponential }}
+
+<div *ngIf="title === 'nicolas'">
+  Este es Nicolas
+</div>
+
+<div *ngIf="title === 'julian'">
+  Este es Julian
+</div>
+
+<div *ngIf="title === 'camilo'">
+  Este es camilo
+</div>
+
+<div [ngSwitch]="title">
+  <p *ngSwitchCase="'nicolas'">Este es nicolas</p>
+  <p *ngSwitchCase="'julian'">Este es julian</p>
+  <p *ngSwitchCase="'camilo'">Este es camilo</p>
+  <p *ngSwitchDefault>No hay match</p>
+</div>
+
+<div *ngIf="isPro">
+  <p>
+    Este es un usuario Pro
+  </p>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Gold_Star.svg/1200px-Gold_Star.svg.png" alt="Pro Star" width="100">
+</div>
+
+<button (click)="addItem()">Add Item</button>
+<ul>
+  <li *ngIf="items.length === 0">La lista esta vacía</li>
+  <li *ngFor="let name of items; index as i">
+    {{ name }} {{ i }}
+    <button (click)="deleteItem(i)">Delete</button>
+  </li>
+</ul>
