Change Page Not Found View

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,7 @@
-<p>page-not-found works!</p>
+<div class="not-found">
+  <div class="not-found__content">
+    <h1 class="not-found__content--title">¿Te sientes perdido?</h1>
+    <h2 class="not-found__content--subtitle">Medita un poco y cuando termines</h2>
+    <a class="not-found__content--link" routerLink="/home">Vuelve a casa</a>
+  </div>
+</div>
