--- a/src/app/contact/components/contact/contact.component.html
+++ b/src/app/contact/components/contact/contact.component.html
@@ -1,1 +1,39 @@
-<p>contact works!</p>
+<div class="contact">
+  <div class="contact__header">
+    <div class="contact__header--container">
+      <h1 class="contact__header--title">Contacto</h1>
+      <p class="contact__header--subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+  </div>
+  <div class="contact__content">
+    <div class="contact__content--parr">
+      <h2>Si tienes alguna duda contactanos</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ullam magni iusto, earum optio nisi iure expedita aut, amet qui facilis obcaecati quaerat quia cumque nulla sint suscipit dicta impedit?</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas suscipit laborum veniam molestiae, impedit natus placeat accusantium labore, provident, quisquam repellat obcaecati iure repudiandae consequuntur? Praesentium inventore sequi eveniet cupiditate.</p>
+      <ul>
+        <li><strong>Direccion:</strong> Lorem, ipsum dolor sit amet consectetur.</li>
+        <li><strong>Telefono:</strong> 123456789</li>
+        <li><strong>Email:</strong> lorem@ipsum.com</li>
+      </ul>
+    </div>
+    <div class="contact__content--form">
+      <form class="contact__form">
+        <div class="form-group">
+          <input type="text" name="name" id="name" placeholder="Nombre">
+        </div>
+        <div class="form-group">
+          <input type="text" name="subject" id="subject" placeholder="Asunto">
+        </div>
+        <div class="form-group">
+          <input type="email" name="email" id="email" placeholder="Corro">
+        </div>
+        <div class="form-group">
+          <textarea name="message" id="message" cols="30" rows="10" placeholder="Mensaje"></textarea>
+        </div>
+        <div class="form-group">
+          <button class="contact__form--button" type="button">Enviar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
