--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,16 +1,18 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <div class="row between-xs middle-xs header-row">
-      <nav>
-        <a mat-button routerLink="/home" routerLinkActive="active">Home</a>
-        <a mat-button routerLink="/products" routerLinkActive="active">Products</a>
-        <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
-        <a mat-button routerLink="/demo" routerLinkActive="active">Demo</a>
-      </nav>
-      <a mat-raised-button matBadge="7" matBadgeColor="warn">
-        <mat-icon aria-hidden="false" aria-label="Shopping cart icon">shopping_cart</mat-icon>
-        Carrito
-      </a>
+    <div class="container">
+      <div class="row between-xs middle-xs header-row">
+        <nav>
+          <a mat-button routerLink="/home" routerLinkActive="active">Home</a>
+          <a mat-button routerLink="/products" routerLinkActive="active">Products</a>
+          <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
+          <a mat-button routerLink="/demo" routerLinkActive="active">Demo</a>
+        </nav>
+        <a mat-raised-button matBadge="7" matBadgeColor="warn">
+          <mat-icon aria-hidden="false" aria-label="Shopping cart icon">shopping_cart</mat-icon>
+          Carrito
+        </a>
+      </div>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
