--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,7 +1,23 @@
-<img src="{{ product.image }}" alt="{{ product.title }}">
-<h3 appHighlight>{{ product.title | uppercase }}</h3>
-<strong>{{ product.price | currency }}</strong>
-<p>{{ product.description | slice:0:10 }}</p>
-<p>{{ today | date:'HH:mm:ss' }}</p>
-<button mat-raised-button color="primary" (click)="addCart()">Agregar al carrito</button>
-<a [routerLink]="['/products', product.id]">Ver detalle</a>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      <h3 appHighlight>{{ product.title | uppercase }}</h3>
+    </mat-card-title>
+    <mat-card-subtitle>
+      <strong>{{ product.price | currency }}</strong>
+    </mat-card-subtitle>
+  </mat-card-header>
+
+  <div class="crop-image">
+    <img src="{{ product.image }}" alt="{{ product.title }}">
+  </div>
+
+  <mat-card-content>
+    <p>{{ product.description | slice:0:10 }}</p>
+  </mat-card-content>
+
+  <mat-card-actions>
+    <a mat-raised-button [routerLink]="['/products', product.id]">Ver detalle</a>
+    <button mat-raised-button color="primary" (click)="addCart()">Agregar al carrito</button>
+  </mat-card-actions>
+</mat-card>
