--- a/src/app/products/components/product/product.component.scss
+++ b/src/app/products/components/product/product.component.scss
@@ -1,26 +1,16 @@
-:host {
-  display: block;
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid lightgray;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-}
-h3 {
-  color: #333;
-  font-weight: normal;
-  font-size: 28px;
-  margin: 10px 0;
-}
-strong {
-  color: royalblue;
-  font-size: 18px;
-  margin-bottom: 10px;
-  display: block;
-}
 img {
   max-width: 100%;
-  height: 150px;
-  object-fit: cover;
-  display: block;
-  margin: 0 auto;
+}
+.crop-image {
+  height: 300px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+  }
 }
