--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,6 +4,7 @@
       <div class="row between-xs middle-xs header-row">
         <nav>
           <a mat-button routerLink="/home" routerLinkActive="active">Home</a>
+          <a mat-button routerLink="/about-us" routerLinkActive="active">About Us</a>
           <a mat-button routerLink="/products" routerLinkActive="active">Products</a>
           <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
           <a mat-button routerLink="/demo" routerLinkActive="active">Demo</a>
