--- a/src/app/contact/components/contact/contact.component.scss
+++ b/src/app/contact/components/contact/contact.component.scss
@@ -1,90 +1,43 @@
+.hero {
+  font-size: 12px;
+  padding: 96px 0;
+  .title {
+    font-size: 5em;
+    font-weight: 500;
+    margin: 0.5em 0;
+  }
+  .description {
+    font-size: 1.5em;
+    font-weight: 300;
+  }
+}
 .contact {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-}
-.contact__header {
-  position: relative;
-  min-height: 400px;
-  background-image: url('https://images.pexels.com/photos/4831/hands-coffee-smartphone-technology.jpg');
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  color: white;
-}
-.contact__header::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba($color: #000000, $alpha: 0.5);
-}
-.contact__header--container {
-  position: relative;
-  width: 1380px;
-  margin: 0 auto;
-  padding: 0 20px;
-  box-sizing: border-box;
-}
-.contact__header--title{
-  font-size: 3.5em;
-  font-weight: normal;
-  letter-spacing: 5px;
-}
-.contact__header--subtitle{
-  font-size: 1.5em;
-}
-
-.contact__content {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(300px, 1fr));
-  width: 1380px;
-  margin: 0 auto;
-}
-.contact__content--parr {
-  padding: 50px;
-}
-.contact__content--parr h2 {
-  font-size: 2.1em;
-  font-weight: normal;
-}
-.contact__content--parr p,
-.contact__content--parr ul li {
-  font-size: 1.2em;
-  font-weight: normal;
-}
-.contact__content--form {
-  padding: 50px;
-}
-.contact__form input,
-.contact__form textarea,
-.contact__form button {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.contact__form input,
-.contact__form textarea {
-  display: block;
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 10px 20px;
-  border: 1px solid #dadce0;
-  border-radius: 5px;
-  box-sizing: border-box;
-}
-.contact__form--button {
-  display: block;
-  width: 100%;
-  padding: 15px 0;
-  border: 0;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 15px;
-  font-weight: bolder;
-  transition: background 0.4s ease, color 0.4s ease;
-}
-.contact__form--button:hover {
-  background-color: royalblue;
-  color: white;
+  padding: 96px 0;
+  .title {
+    font-size: 3em;
+    font-weight: 500;
+  }
+  .description {
+    font-size: 1.3em;
+    font-weight: 300;
+  }
+  .info {
+    p {
+      display: flex;
+      align-items: center;
+      font-size: 1.2em;
+    }
+    mat-icon {
+      margin-right: 10px;
+    }
+    strong {
+      margin-right: 10px;
+    }
+  }
+  mat-form-field {
+    width: 100%;
+  }
+  button {
+    width: 100%;
+  }
 }
