Add our history section to about us page

--- a/src/app/about-us/components/about-us/about-us.component.html
+++ b/src/app/about-us/components/about-us/about-us.component.html
@@ -1,17 +1,32 @@
-<main>
-  <section class="hero">
-    <div class="row middle-md">
-      <div class="col-xs-12 col-md-5">
-        <div class="box">
-          <h1 class="title">All About Us</h1>
-          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A sed exercitationem autem. Nobis, inventore porro repudiandae suscipit tempora similique ducimus illo sequi ea vero sapiente, minima iure fugiat voluptate accusamus.</p>
-        </div>
+<section class="hero">
+  <div class="row middle-xs">
+    <div class="col-xs-12 col-md-5">
+      <div class="box">
+        <h1 class="title">All About Us</h1>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A sed exercitationem autem. Nobis, inventore porro repudiandae suscipit tempora similique ducimus illo sequi ea vero sapiente, minima iure fugiat voluptate accusamus.</p>
       </div>
-      <div class="col-xs-12 col-md-5 col-md-offset-2">
-        <div class="box">
-          <img src="https://www.masoodgraphics.com/img/sections/bg/about%20us.png" alt="About Us" class="image">
+    </div>
+    <div class="col-xs-12 col-md-5 col-md-offset-2">
+      <div class="box">
+        <img src="https://www.masoodgraphics.com/img/sections/bg/about%20us.png" alt="About Us" class="image">
+      </div>
+    </div>
+  </div>
+</section>
+<section class="history">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="box">
+        <h2 class="title">Our History</h2>
+        <div class="description">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sodales erat mauris, dignissim cursus orci rhoncus sit amet. Maecenas quis enim placerat odio tristique sodales. Curabitur et ligula arcu. Donec pellentesque tristique tellus, ut iaculis turpis consectetur quis.</p>
+          <p>Integer tempus ultricies elit, vitae fermentum sapien sagittis interdum. Vivamus vitae nibh molestie, vehicula nibh quis, pretium ipsum. Nullam vel rutrum ligula. Vivamus sit amet aliquam nunc. Praesent massa purus, vestibulum sed justo nec, bibendum malesuada sapien.</p>
+          <p>Praesent in mauris vitae nulla scelerisque fermentum et non sapien. Curabitur lacinia enim sit amet nibh ultrices, non feugiat. Praesent aliquam ipsum ac mauris rutrum, lacinia faucibus nibh gravida. Donec tristique, mauris eu rhoncus cursus, libero purus malesuada augue, a viverra eros sapien eu nisl.</p>
+        </div>
+        <div class="image">
+          <img src="https://contract-design-library.s3.eu-central-1.amazonaws.com/files/20200826130138-timeline.png" alt="timeline">
         </div>
       </div>
     </div>
-  </section>
-</main>
+  </div>
+</section>
