--- a/src/app/about-us/components/about-us/about-us.component.scss
+++ b/src/app/about-us/components/about-us/about-us.component.scss
@@ -1,5 +1,4 @@
 .hero {
-  min-height: 600px;
   font-size: 12px;
   padding: 96px 0;
   .title{
@@ -13,5 +12,27 @@
   }
   .image {
     width: 100%;
+  }
+}
+
+.history {
+  padding: 96px 0;
+  .title {
+    text-align: center;
+    font-size: 3em;
+    font-weight: 500;
+  }
+  .description {
+    font-size: 1.2em;
+    font-weight: 300;
+    line-height: 1.5em;
+  }
+  .image {
+    height: 200px;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
