Improve responsive design at contact page

--- a/src/app/contact/components/contact/contact.component.html
+++ b/src/app/contact/components/contact/contact.component.html
@@ -1,19 +1,21 @@
 <section class="hero">
-  <div class="row middle-xs center-xs content">
+  <div class="row middle-xs">
     <div class="col-xs-12 col-md-5">
       <div class="box">
         <h1 class="title">Contact</h1>
-        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt rem maiores quaerat fugit aliquid nihil libero molestias nostrum recusandae repellendus ducimus facilis aspernatur adipisci laboriosam, at officia officiis. Labore, adipisci!</p>
       </div>
     </div>
     <div class="col-xs-12 col-md-5 col-md-offset-2">
-      <img src="https://lh3.googleusercontent.com/proxy/dWiFGm9OrHwNy0H1bYYthYhQxZHJ2hCLMBRRpMAN4e55yiZHyJvEkKNFsp-DTWndc72YQX2arZurisUMDKFZ9ilBgAMruv4UVL6TPNo4lw" alt="Contact image" class="image">
+      <div class="box">
+        <img src="https://lh3.googleusercontent.com/proxy/dWiFGm9OrHwNy0H1bYYthYhQxZHJ2hCLMBRRpMAN4e55yiZHyJvEkKNFsp-DTWndc72YQX2arZurisUMDKFZ9ilBgAMruv4UVL6TPNo4lw" alt="Contact image" class="image">
+      </div>
     </div>
   </div>
 </section>
 <section class="contact">
   <div class="row middle-xs">
-    <div class="col-xs-12 col-md-6">
+    <div class="col-xs-12 col-md-5">
       <div class="box">
         <h2 class="title">Si tienes alguna duda contactanos</h2>
         <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem eius amet voluptatibus quas quidem.</p>
@@ -27,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="col-xs-12 col-md-6">
+    <div class="col-xs-12 col-md-5 col-md-offset-2">
       <div class="box">
         <mat-form-field appearance="fill">
           <mat-label>Nombre</mat-label>
