--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item routerLink="/admin">Dashboard</a>
       <a mat-list-item routerLink="/admin/create">Crear producto</a>
       <a mat-list-item routerLink="/admin/stock">Stock</a>
-      <a mat-list-item routerLink="/admin/create">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
