--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -7,7 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/admin">Dashboard</a>
       <a mat-list-item routerLink="/admin/create">Crear producto</a>
-      <a mat-list-item routerLink="/admin/stock">Stock</a>
+      <a mat-list-item routerLink="/admin/product-list">Lista de productos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
