--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -1,10 +1,15 @@
-<div>
-  <img [src]="product.image" alt="{{ product.title }}">
+<div *ngIf="product; else empty">
+  <div>
+    <img [src]="product.image" alt="{{ product.title }}">
+  </div>
+  <div>
+    <ul>
+      <li>Nombre: {{ product.title }}</li>
+      <li>Precio: {{ product.price | currency }}</li>
+    </ul>
+    <p>{{ product.description }}</p>
+  </div>
 </div>
-<div>
-  <ul>
-    <li>Nombre: {{ product.title }}</li>
-    <li>Precio: {{ product.price | currency }}</li>
-  </ul>
-  <p>{{ product.description }}</p>
-</div>
+<ng-template #empty>
+  <p>Loading...</p>
+</ng-template>
