--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -9,6 +9,8 @@
     </ul>
     <p>{{ product.description }}</p>
   </div>
+
+  <button (click)="createProduct()">Crear</button>
 </div>
 <ng-template #empty>
   <p>Loading...</p>
