--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -11,6 +11,8 @@
   </div>
 
   <button (click)="createProduct()">Crear</button>
+  <button (click)="updateProduct()">Actualizar</button>
+  <button (click)="deleteProduct()">Eliminar</button>
 </div>
 <ng-template #empty>
   <p>Loading...</p>
