--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,7 +9,7 @@
           <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
           <a mat-button routerLink="/demo" routerLinkActive="active">Demo</a>
         </nav>
-        <a mat-raised-button matBadge="7" matBadgeColor="warn">
+        <a mat-raised-button [matBadge]="total" matBadgeColor="warn">
           <mat-icon aria-hidden="false" aria-label="Shopping cart icon">shopping_cart</mat-icon>
           Carrito
         </a>
