--- a/src/app/order/components/order/order.component.html
+++ b/src/app/order/components/order/order.component.html
@@ -9,12 +9,17 @@
             <img [src]="product.image" class="image" alt="">
           </div>
         </div>
-        <div class="col-xs-12 col-sm-5 col-md-5">
+        <div class="col-xs-12 col-sm-4 col-md-4">
           <div class="box">
             {{ product.title }}
           </div>
         </div>
-        <div class="col-xs-12 col-sm-5 col-md-5">
+        <div class="col-xs-12 col-sm-2 col-md-2">
+          <div class="box">
+            {{ product.quantity }}
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
           <div class="box">
             {{ product.price | currency }}
           </div>
